# zero2prod

./: Cargo.toml
migrations/: 20241013201611_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscribe.rs
